plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.14'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'A4'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '11'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.rest-assured:rest-assured:4.4.0'
	implementation 'org.springdoc:springdoc-openapi-ui:1.6.12'
}

tasks.register('unitTest', Test) {
	useJUnitPlatform {
		include '**/unit/**'
	}
}

tasks.register('integrationTest', Test) {
	useJUnitPlatform {
		include '**/integration/**'
	}
}

test {
	useJUnitPlatform {
		exclude '**/integration/**'
	}
	finalizedBy integrationTest
}

check.dependsOn integrationTest